# FileGenius

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.claude/: PROCESS-SETUP.md  TOMORROW-QUICK-START.md
.claude/context/: project-style-guide.md  system-patterns.md  tech-context.md  workflow.md
.claude/patterns/: ci-generation-patterns.md  docs-generation-patterns.md  feature-generation-patterns.md  search-generation-patterns.md  test-generation-patterns.md
.claude/prds/: desktop-e2e-testing.md
.claude/rules/: development-guidelines.md  main-branch-protection.md  pr-monitoring-protocol.md  pr-review-response-protocol.md  pr-workflow-master.md  tdd-workflow.md
.claude/scripts/: check-integration-floors.py  generate-integration-floors.py
.claude/skills/audit/: SKILL.md
.github/workflows/: ci-full.yml  ci.yml
docs/: cli-reference.md  desktop-app.md  getting-started.md
docs/api/: error-reference.md  index.md  reference.md
docs/architecture/: architecture-overview.md  module-diagrams.md
docs/blog/: 2026-03-08-llm-pr-churn-pitfalls.md
docs/developer/: guardrails.md  index.md  playwright-e2e.md  testing.md
docs/internal/: CLAUDE.md
docs/superpowers/plans/: 2026-04-06-integration-coverage-ratchet.md  2026-04-07-a3-playwright-e2e-docs.md  2026-04-07-b1-organize-workflow-e2e.md  2026-04-07-docstring-completion-and-ratchet.md  2026-04-08-b2-auth-lifecycle-e2e.md  2026-04-08-b4-marketplace-plugin-lifecycle-e2e.md  2026-04-08-b5-a11y-smoke-e2e.md
docs/superpowers/specs/: 2026-04-06-integration-coverage-ratchet-design.md  2026-04-07-a3-playwright-e2e-housekeeping-design.md  2026-04-07-b1-organize-workflow-e2e-design.md  2026-04-08-b2-auth-lifecycle-e2e-design.md  2026-04-08-b4-marketplace-plugin-lifecycle-e2e-design.md  2026-04-08-b5-a11y-smoke-e2e-design.md
scripts/: run-local-ci.sh  run-mypy-changed.sh
src/file_organizer/api/: api_keys.py  auth.py  auth_rate_limit.py  auth_store.py  dependencies.py  exceptions.py  jobs.py  main.py  middleware.py  models.py  openapi_responses.py  rate_limit.py  realtime.py  service_facade.py  test_utils.py
src/file_organizer/api/repositories/: file_metadata_repo.py
src/file_organizer/api/routers/: analyze.py  auth.py  config.py  daemon.py  dedupe.py  files.py  health.py  integrations.py  marketplace.py  organize.py  realtime.py  search.py  setup.py  system.py
src/file_organizer/cli/: benchmark.py  main.py
src/file_organizer/core/: dispatcher.py  organizer.py
src/file_organizer/desktop/: app.py
src/file_organizer/integrations/: obsidian.py  vscode.py
src/file_organizer/methodologies/para/ai/: feature_extractor.py
src/file_organizer/models/: text_model.py
src/file_organizer/optimization/: buffer_pool.py  memory_profiler.py
src/file_organizer/pipeline/: orchestrator.py
src/file_organizer/plugins/: config.py  executor.py  security.py
src/file_organizer/plugins/api/: endpoints.py  hooks.py  models.py
src/file_organizer/plugins/marketplace/: installer.py  metadata.py  models.py  repository.py  reviews.py  service.py
src/file_organizer/plugins/sdk/: client.py  decorators.py
src/file_organizer/review_regressions/: api_compat.py  audit.py  correctness.py  test_quality.py
src/file_organizer/services/search/: embedding_cache.py
src/file_organizer/tui/: app.py  settings_view.py
src/file_organizer/web/: csrf.py  settings_routes.py
src/file_organizer/web/static/css/: styles.css
src/file_organizer/web/static/js/: desktop_api.js  setup_wizard.js
src/file_organizer/web/templates/: base.html  index.html  setup_wizard.html
src/file_organizer/web/templates/files/: _results.html
src/file_organizer/web/templates/marketplace/: index.html
src/file_organizer/web/templates/organize/: dashboard.html
src/file_organizer/web/templates/settings/: index.html
tests/: conftest.py  test_copilot_engine.py  test_web_settings.py
tests/api/: test_auth_integration.py  test_connection_manager_integration.py  test_dedupe_router.py  test_main_app.py  test_openapi_responses.py  test_service_facade_integration.py
tests/ci/: test_docs_contracts.py  test_integration_floors.py  test_path_security_contract.py  test_search_code_quality.py  test_test_quality_guardrails.py  test_workflows.py
tests/cli/: test_cli_dedupe.py  test_doctor.py
tests/desktop/: test_desktop_api_browse_file.py  test_desktop_api_open_path.py  test_desktop_api_save_file.py
tests/docs/: conftest.py  test_code_examples.py  test_doc_file_paths.py  test_link_integrity.py
tests/integration/: test_analytics_dedup_services.py  test_api_auth_system_routes.py  test_api_dedupe_routes.py  test_api_files_organize_routes.py  test_api_health_analyze.py  test_api_setup_routes.py  test_dedupe_hash_integration.py  test_dedupe_removal_integration.py  test_desktop_api_integration.py  test_file_metadata_repo_integration.py  test_image_utils.py  test_job_repo_integration.py  test_optimization_core.py
tests/pipeline/: test_orchestrator.py
tests/playwright/: conftest.py  test_a11y_smoke.py  test_auth_lifecycle.py  test_desktop_api_contract.py  test_file_browser_desktop.py  test_marketplace_lifecycle.py  test_organize_workflow.py  test_settings_persistence.py  test_setup_wizard_flow.py  test_smoke.py
tests/services/: test_smart_suggestions.py
tests/services/analytics/: test_storage_analyzer.py
tests/services/intelligence/: test_preference_store_coverage.py
tests/updater/: test_installer.py
tests/web/: test_csrf.py  test_settings_routes.py
