[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-file-organizer"
version = "2.0.0-alpha.3"
description = "AI-powered local file management with state-of-the-art models"
authors = [
    {name = "Local File Organizer Team", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.11"
keywords = ["file-management", "ai", "organization", "local-llm", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core AI inference
    "ollama>=0.1.0",  # 0.x — unstable API, keep >=

    # File processing (core image only)
    "Pillow~=10.0",

    # NLP and data science
    "nltk~=3.8",
    "numpy~=1.24",  # Numerical computing (used in dedup, video, optimization)
    "tqdm~=4.66",  # Progress bars (used in CLI dedup)

    # CLI and UI
    "typer[all]~=0.12",
    "rich~=13.0",
    "textual~=0.50",

    # API and async
    "fastapi~=0.109",
    "starlette~=0.35",  # Direct imports: BaseHTTPMiddleware, Response, WebSocketState
    "aiofiles~=23.0",  # Required by Starlette StaticFiles for async file serving
    "jinja2~=3.1",
    "markupsafe~=3.0",  # Direct import in web csrf_input; also a jinja2 transitive dep
    "uvicorn[standard]~=0.27",
    "websockets~=12.0",
    "httpx~=0.26",
    "python-multipart>=0.0.9",  # 0.x — unstable API, keep >=
    # Security: ecdsa is transitive via python-jose. Pin >= 0.19.2 for CVE-2026-33936.
    # Pygments is transitive via rich/textual. Pin >= 2.20.0 for CVE-2026-4539.
    "ecdsa>=0.19.2",
    "Pygments>=2.20.0",
    "python-jose~=3.3",
    "bcrypt>=4.0.0,<6.0.0",
    # Database
    "sqlalchemy~=2.0",
    "alembic~=1.13",

    # Task queue
    "redis~=7.4",
    # Configuration
    "pyyaml~=6.0",  # YAML config parsing
    "platformdirs~=3.0",  # Cross-platform config/data directory resolution

    # Utilities
    "pydantic~=2.5",
    "pydantic-settings~=2.1",
    "email-validator~=2.1",
    "python-dotenv~=1.0",
    "click~=8.1",
    "watchdog~=3.0",  # File system event handler

    # System utilities
    "psutil~=5.9",  # System resource monitoring

    # Logging
    "loguru>=0.7.0",  # 0.x — unstable API, keep >=
]

[project.optional-dependencies]
parsers = [
    "PyMuPDF~=1.23",
    "python-docx~=1.0",
    "openpyxl~=3.1",
    "python-pptx>=0.6.0",  # 0.x — unstable API, keep >=
    "ebooklib>=0.18",  # 0.x — unstable API, keep >=
    "beautifulsoup4~=4.12",
    "lxml~=4.9",
]

web = [
    "fastapi~=0.109",
    "jinja2~=3.1",
    "uvicorn[standard]~=0.27",
    "websockets~=12.0",
    "httpx~=0.26",
    "python-multipart>=0.0.9",  # 0.x — unstable API, keep >=
    # Security: ecdsa is transitive via python-jose. Pin >= 0.19.2 for CVE-2026-33936.
    # Pygments is transitive via rich/textual. Pin >= 2.20.0 for CVE-2026-4539.
    "ecdsa>=0.19.2",
    "Pygments>=2.20.0",
    "python-jose~=3.3",
    "bcrypt>=4.0.0,<6.0.0",

    "redis~=7.4",
]

dev = [
    "pytest~=7.4",
    "pytest-asyncio~=0.23",
    "pytest-cov~=4.1",
    "pytest-mock~=3.12",
    "pytest-timeout>=2.2.0,<2.5.0",  # 2.4.0 regression: timer thread not cancelled on Windows; crashes during teardown (AssertionError in read_global_capture)
    "pytest-xdist~=3.5",
    "pytest-randomly~=3.15",
    "mypy~=1.8",
    "types-PyYAML~=6.0",
    "ruff>=0.1.0",  # 0.x — unstable API, keep >=
    "black>=23.12,<27.0",
    "isort~=5.13",
    "pre-commit~=3.6",
    "codespell~=2.2",
    "faker~=40.12",
    "pytest-benchmark~=4.0",
    "interrogate~=1.5",  # Docstring coverage measurement
    "pymarkdownlnt>=0.9.25",  # 0.x — unstable API, keep >=; Markdown linting
    "deptry>=0.16.0",  # 0.x — unstable API, keep >=; Unused dependency detection
    "diff-cover~=7.0",  # Diff coverage gate (local pre-commit + CI validation)
    "asgi-lifespan~=2.1",  # ASGI lifespan management for integration tests
    "pytest-playwright>=0.5.0",  # Browser-based E2E smoke tests (requires: playwright install chromium)
    "axe-playwright-python>=0.1.7",  # axe-core a11y smoke checks for Playwright tests
]

cloud = [
    "openai~=1.0",  # OpenAI-compatible API provider (OpenAI, Groq, LM Studio, vLLM)
]

llama = [
    # Security note (2026-03-16): diskcache 5.6.3 (GHSA-w8v5-vhqr-4h9v) is a transitive
    # dep of llama-cpp-python. Risk accepted: diskcache is never imported or called by
    # application code. No patched version exists upstream.
    "llama-cpp-python>=0.2.0",  # 0.x — unstable API, keep >=; llama.cpp C bindings
]

mlx = [
    "mlx-lm>=0.0.19; platform_system == 'Darwin'",  # MLX runtime is only supported on Darwin
]

claude = [
    "anthropic>=0.20.0",  # 0.x — unstable API, keep >=; Anthropic Claude API provider
]

gui = [
    "PyQt6~=6.6",
]

desktop = [
    # pywebview wraps the OS-native webview engine (WebKit on macOS/Linux,
    # Edge WebView2 on Windows) — no Chromium/Electron overhead.
    # 0.x numbering ended at 3.x; project uses SemVer from 4.0 onward.
    "pywebview>=4.4",
    # Server-side deps required at runtime inside the desktop process.
    "uvicorn[standard]~=0.27",
]

audio = [
    "faster-whisper~=1.0",
    "torch~=2.1",  # GPU acceleration for audio transcription
    "mutagen~=1.47",  # Audio metadata extraction
    "tinytag>=1.10,<3.0",  # Lightweight audio metadata fallback
    "pydub>=0.25.0",  # 0.x — unstable API, keep >=; Audio manipulation
]

video = [
    "opencv-python~=4.8",  # Video frame processing
    "scenedetect[opencv]>=0.6.0",  # 0.x — unstable API, keep >=; Scene detection algorithms
]

dedup = [
    "imagededup>=0.3.0",  # 0.x — unstable API, keep >=; Image similarity and duplicate detection
    "scikit-learn~=1.4",  # ML-based text similarity for deduplication
    "pypdf>=4,<7",  # PDF text extraction fallback in dedup extractor
    "striprtf>=0.0.26",  # 0.x — unstable API, keep >=; RTF file text extraction in dedup extractor
]

archive = [
    "py7zr>=0.20.0",  # 0.x — unstable API, keep >=; 7Z archive support
    "rarfile~=4.1",  # RAR archive support (requires unrar tool)
]

scientific = [
    "h5py~=3.10",  # HDF5 file format support
    "netCDF4~=1.6",  # NetCDF file format support
    "scipy~=1.11",  # MATLAB .mat file support
]

cad = [
    "ezdxf~=1.1",  # DXF/DWG CAD file format support
]

build = [
    "pyinstaller~=6.0",  # Cross-platform executable packaging
]

docs = [
    "mkdocs~=1.5",
    "mkdocs-material~=9.5",
    "pymdown-extensions~=10.7",
    "mkdocs-minify-plugin>=0.8.0",  # 0.x — unstable API, keep >=
    "mkdocstrings[python]>=0.24.0",  # 0.x — unstable API, keep >=
]

search = [
    "rank-bm25>=0.2.0",  # 0.x — unstable API, keep >=
    "scikit-learn~=1.4",
]

all = [
    "local-file-organizer[dev,gui,cloud,llama,mlx,claude,audio,video,dedup,archive,scientific,cad,build,parsers,web,search]",
]

[project.scripts]
file-organizer = "file_organizer.cli:main"
fo = "file_organizer.cli:main"  # Short alias
file-organizer-desktop = "file_organizer.desktop.app:launch"  # Native desktop window (requires [desktop] extra)

[project.urls]
Homepage = "https://github.com/curdriceaurora/Local-File-Organizer"
Documentation = "https://github.com/curdriceaurora/Local-File-Organizer#readme"
Repository = "https://github.com/curdriceaurora/Local-File-Organizer"
Issues = "https://github.com/curdriceaurora/Local-File-Organizer/issues"
Changelog = "https://github.com/curdriceaurora/Local-File-Organizer/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
file_organizer = [
    "py.typed",
    "config/*.yaml",
    "web/templates/**/*.html",
    "web/static/**/*",
]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".claude/",
    ".venv*/",
    "technical-debt/",
    "fix_coderabbit_issues.py",
    "test_preference_tracker.py",
]
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C901", # mccabe complexity
    "UP",  # pyupgrade
    "D",   # pydocstyle (google convention)
    "RUF100",  # stale noqa comments
    "DTZ",  # datetime timezone rules (DTZ001-DTZ007, DTZ011-DTZ012)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ANN401", # **kwargs: Any is acceptable in abstract/polymorphic interfaces
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
"scripts/docker_utils.py" = ["D", "C901"]
# C901 ratchet baseline — functions exceeding complexity 15 (2026-02-28)
# Each entry allows existing complex functions; new ones must stay under 15.
# Note: 9 files refactored in 2026-03 (task 005), 3 more in issue #1022.
# Remaining files with complexity > 15:
"src/file_organizer/core/organizer.py" = ["C901"]  # organize: 33

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=file_organizer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=95",
    "--timeout=30",
    # Branch coverage baseline (integration tests only):
    # Measured 2026-03-21 via measure-integration-coverage.sh: TOTAL ~49%
    # Enforced floor: 45% branch — lives in .github/workflows/ci.yml (test-integration job).
    # measure-integration-coverage.sh is a local measurement tool only; it does not enforce the floor.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "ci: marks tests intended for PR CI validation",
    "smoke: marks tests for fast pre-commit validation (<30s total)",
    "no_ollama: marks tests that verify fallback behavior when Ollama is unavailable",
    "regression: marks tests intended for full regression runs",
    "e2e: end-to-end tests against real file trees (no Ollama required)",
    "benchmark: performance benchmark tests (use --benchmark-only to run)",
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "playwright: browser-based E2E tests (requires `playwright install <browser>` for chromium, firefox, or webkit; select with --browser=<name>; run with --override-ini='addopts=')",
]
filterwarnings = [
    "error::DeprecationWarning:file_organizer",
    "error::PendingDeprecationWarning:file_organizer",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:google",
    "ignore::DeprecationWarning:importlib",
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]
# pytest-benchmark settings (pass via CLI: --benchmark-min-rounds=3 --benchmark-max-time=30.0)
# benchmark_ prefix keys are NOT supported as ini_options in pytest-benchmark 5.x

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Interrogate configuration (docstring coverage)
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
fail-under = 95
exclude = ["tests", "setup.py", "docs"]
verbose = 1
quiet = false
whitelist-regex = []

# deptry: unused dependency detection
# Run as: deptry src/  (scans source only)
[tool.deptry]
# First-party package — suppress DEP001 false positives from src-layout
known_first_party = ["file_organizer"]
# Only tool-only groups where packages are never imported in application code
pep621_dev_dependency_groups = ["dev", "docs", "build"]
# Map distribution names → import names for packages that differ
[tool.deptry.package_module_name_map]
"Pillow" = "PIL"
"PyMuPDF" = "fitz"
"python-docx" = "docx"
"python-pptx" = "pptx"
"beautifulsoup4" = "bs4"
"pyyaml" = "yaml"
"python-jose" = "jose"
"scikit-learn" = "sklearn"
"opencv-python" = "cv2"
"pydantic-settings" = "pydantic_settings"
"pypdf" = "pypdf"
"striprtf" = "striprtf"
"llama-cpp-python" = "llama_cpp"
"mlx-lm" = "mlx_lm"
"pywebview" = "webview"
[tool.deptry.per_rule_ignores]
# netCDF4: in scientific optional group; deptry has mixed-case matching issues
DEP001 = ["netCDF4"]
# aiofiles: Starlette StaticFiles uses it for async file serving (no direct import)
# python-multipart: FastAPI uses it for file uploads (no direct import)
# lxml: used as bs4 parser string "lxml" (not imported directly)
# email-validator: pydantic uses it for EmailStr (not imported directly)
# websockets: starlette WebSocket support (must be installed, not imported)
# python-dotenv: pydantic-settings reads .env files via this package
# jinja2: fastapi.templating wraps it (not imported directly)
# alembic: used as CLI migration tool (not imported in application code)
# openpyxl: pandas uses it for Excel I/O (not imported directly)
# local-file-organizer: self-reference in the [all] optional group
DEP002 = [
    "aiofiles",
    "python-multipart",
    "lxml",
    "email-validator",
    "websockets",
    "python-dotenv",
    "jinja2",
    "alembic",
    "openpyxl",
    "local-file-organizer",
    # pydantic-settings: pydantic's BaseSettings uses it internally; no direct import needed
    "pydantic-settings",
    # PyQt6: GUI-only dep; GUI application lives outside src/file_organizer/
    "PyQt6",
    # netCDF4: mixed-case name causes deptry matching issues; used in scientific.py
    "netCDF4",
    # ecdsa: transitive via python-jose; pinned for CVE-2026-33936
    "ecdsa",
    # Pygments: transitive via rich/textual; pinned for CVE-2026-4539
    "Pygments",
    # pywebview: desktop GUI wrapper; import name is 'webview' (mapped above); used in desktop/app.py
    "pywebview",
]

[tool.coverage.floors.integration]
"src/file_organizer/__init__.py" = 100
"src/file_organizer/_compat.py" = 100
"src/file_organizer/api/__init__.py" = 30
"src/file_organizer/api/api_keys.py" = 45
"src/file_organizer/api/auth.py" = 80
"src/file_organizer/api/auth_db.py" = 100
"src/file_organizer/api/auth_models.py" = 100
"src/file_organizer/api/auth_rate_limit.py" = 65
"src/file_organizer/api/auth_store.py" = 85
"src/file_organizer/api/cache.py" = 75
"src/file_organizer/api/config.py" = 75
"src/file_organizer/api/database.py" = 95
"src/file_organizer/api/db.py" = 100
"src/file_organizer/api/db_models.py" = 100
"src/file_organizer/api/dependencies.py" = 75
"src/file_organizer/api/exceptions.py" = 100
"src/file_organizer/api/integration_models.py" = 100
"src/file_organizer/api/jobs.py" = 95
"src/file_organizer/api/main.py" = 80
"src/file_organizer/api/middleware.py" = 75
"src/file_organizer/api/models.py" = 90
"src/file_organizer/api/openapi_responses.py" = 95
"src/file_organizer/api/rate_limit.py" = 75
"src/file_organizer/api/realtime.py" = 55
"src/file_organizer/api/repositories/__init__.py" = 100
"src/file_organizer/api/repositories/file_metadata_repo.py" = 90
"src/file_organizer/api/repositories/job_repo.py" = 95
"src/file_organizer/api/repositories/session_repo.py" = 35
"src/file_organizer/api/repositories/settings_repo.py" = 70
"src/file_organizer/api/repositories/workspace_repo.py" = 50
"src/file_organizer/api/routers/__init__.py" = 65
"src/file_organizer/api/routers/analyze.py" = 80
"src/file_organizer/api/routers/auth.py" = 80
"src/file_organizer/api/routers/config.py" = 100
"src/file_organizer/api/routers/daemon.py" = 100
"src/file_organizer/api/routers/dedupe.py" = 85
"src/file_organizer/api/routers/files.py" = 65
"src/file_organizer/api/routers/health.py" = 100
"src/file_organizer/api/routers/integrations.py" = 95
"src/file_organizer/api/routers/marketplace.py" = 85
"src/file_organizer/api/routers/organize.py" = 85
"src/file_organizer/api/routers/realtime.py" = 10
"src/file_organizer/api/routers/search.py" = 55
"src/file_organizer/api/routers/setup.py" = 90
"src/file_organizer/api/routers/system.py" = 55
"src/file_organizer/api/service_facade.py" = 75
"src/file_organizer/api/utils.py" = 80
"src/file_organizer/cli/__init__.py" = 50
"src/file_organizer/cli/_globals.py" = 100
"src/file_organizer/cli/analytics.py" = 85
"src/file_organizer/cli/api.py" = 95
"src/file_organizer/cli/autotag.py" = 95
"src/file_organizer/cli/autotag_v2.py" = 100
"src/file_organizer/cli/benchmark.py" = 50
"src/file_organizer/cli/completion.py" = 100
"src/file_organizer/cli/config_cli.py" = 100
"src/file_organizer/cli/copilot.py" = 95
"src/file_organizer/cli/daemon.py" = 75
"src/file_organizer/cli/dedupe.py" = 25
"src/file_organizer/cli/dedupe_display.py" = 70
"src/file_organizer/cli/dedupe_hash.py" = 85
"src/file_organizer/cli/dedupe_removal.py" = 100
"src/file_organizer/cli/dedupe_strategy.py" = 80
"src/file_organizer/cli/dedupe_v2.py" = 90
"src/file_organizer/cli/doctor.py" = 80
"src/file_organizer/cli/interactive.py" = 50
"src/file_organizer/cli/main.py" = 90
"src/file_organizer/cli/marketplace.py" = 100
"src/file_organizer/cli/models_cli.py" = 30
"src/file_organizer/cli/organize.py" = 75
"src/file_organizer/cli/profile.py" = 90
"src/file_organizer/cli/rules.py" = 85
"src/file_organizer/cli/setup.py" = 90
"src/file_organizer/cli/suggest.py" = 80
"src/file_organizer/cli/undo_history.py" = 40
"src/file_organizer/cli/undo_redo.py" = 65
"src/file_organizer/cli/update.py" = 15
"src/file_organizer/cli/utilities.py" = 70
"src/file_organizer/client/__init__.py" = 100
"src/file_organizer/client/async_client.py" = 70
"src/file_organizer/client/exceptions.py" = 100
"src/file_organizer/client/models.py" = 100
"src/file_organizer/client/sync_client.py" = 70
"src/file_organizer/config/__init__.py" = 100
"src/file_organizer/config/manager.py" = 65
"src/file_organizer/config/path_manager.py" = 75
"src/file_organizer/config/path_migration.py" = 90
"src/file_organizer/config/provider_env.py" = 50
"src/file_organizer/config/schema.py" = 100
"src/file_organizer/core/__init__.py" = 100
"src/file_organizer/core/backend_detector.py" = 20
"src/file_organizer/core/dispatcher.py" = 95
"src/file_organizer/core/display.py" = 100
"src/file_organizer/core/file_ops.py" = 95
"src/file_organizer/core/hardware_profile.py" = 45
"src/file_organizer/core/initializer.py" = 100
"src/file_organizer/core/organizer.py" = 85
"src/file_organizer/core/setup_wizard.py" = 95
"src/file_organizer/core/types.py" = 100
"src/file_organizer/daemon/__init__.py" = 100
"src/file_organizer/daemon/config.py" = 100
"src/file_organizer/daemon/pid.py" = 85
"src/file_organizer/daemon/scheduler.py" = 75
"src/file_organizer/daemon/service.py" = 55
"src/file_organizer/deploy/__init__.py" = 100
"src/file_organizer/deploy/compose_scaler.py" = 15
"src/file_organizer/deploy/config.py" = 30
"src/file_organizer/deploy/health.py" = 30
"src/file_organizer/deploy/monitoring.py" = 40
"src/file_organizer/deploy/scaling.py" = 35
"src/file_organizer/desktop/__init__.py" = 0
"src/file_organizer/desktop/__main__.py" = 0
"src/file_organizer/desktop/app.py" = 60
"src/file_organizer/events/__init__.py" = 100
"src/file_organizer/events/audit.py" = 95
"src/file_organizer/events/config.py" = 100
"src/file_organizer/events/consumer.py" = 35
"src/file_organizer/events/discovery.py" = 100
"src/file_organizer/events/health.py" = 100
"src/file_organizer/events/middleware.py" = 50
"src/file_organizer/events/monitor.py" = 20
"src/file_organizer/events/publisher.py" = 85
"src/file_organizer/events/pubsub.py" = 80
"src/file_organizer/events/replay.py" = 90
"src/file_organizer/events/service_bus.py" = 75
"src/file_organizer/events/stream.py" = 75
"src/file_organizer/events/subscription.py" = 85
"src/file_organizer/events/types.py" = 100
"src/file_organizer/history/__init__.py" = 100
"src/file_organizer/history/cleanup.py" = 95
"src/file_organizer/history/database.py" = 90
"src/file_organizer/history/export.py" = 90
"src/file_organizer/history/models.py" = 90
"src/file_organizer/history/tracker.py" = 95
"src/file_organizer/history/transaction.py" = 95
"src/file_organizer/integrations/__init__.py" = 100
"src/file_organizer/integrations/base.py" = 100
"src/file_organizer/integrations/browser.py" = 95
"src/file_organizer/integrations/manager.py" = 60
"src/file_organizer/integrations/obsidian.py" = 75
"src/file_organizer/integrations/vscode.py" = 75
"src/file_organizer/integrations/workflow.py" = 80
"src/file_organizer/interfaces/__init__.py" = 100
"src/file_organizer/interfaces/intelligence.py" = 100
"src/file_organizer/interfaces/model.py" = 100
"src/file_organizer/interfaces/pipeline.py" = 95
"src/file_organizer/interfaces/processor.py" = 100
"src/file_organizer/interfaces/search.py" = 100
"src/file_organizer/interfaces/storage.py" = 100
"src/file_organizer/methodologies/__init__.py" = 100
"src/file_organizer/methodologies/johnny_decimal/__init__.py" = 100
"src/file_organizer/methodologies/johnny_decimal/adapters.py" = 50
"src/file_organizer/methodologies/johnny_decimal/categories.py" = 90
"src/file_organizer/methodologies/johnny_decimal/compatibility.py" = 60
"src/file_organizer/methodologies/johnny_decimal/config.py" = 90
"src/file_organizer/methodologies/johnny_decimal/migrator.py" = 15
"src/file_organizer/methodologies/johnny_decimal/numbering.py" = 60
"src/file_organizer/methodologies/johnny_decimal/scanner.py" = 70
"src/file_organizer/methodologies/johnny_decimal/system.py" = 80
"src/file_organizer/methodologies/johnny_decimal/transformer.py" = 55
"src/file_organizer/methodologies/johnny_decimal/validator.py" = 65
"src/file_organizer/methodologies/para/__init__.py" = 100
"src/file_organizer/methodologies/para/ai/__init__.py" = 100
"src/file_organizer/methodologies/para/ai/feature_extractor.py" = 85
"src/file_organizer/methodologies/para/ai/feedback.py" = 95
"src/file_organizer/methodologies/para/ai/file_mover.py" = 85
"src/file_organizer/methodologies/para/ai/suggestion_engine.py" = 70
"src/file_organizer/methodologies/para/categories.py" = 80
"src/file_organizer/methodologies/para/config.py" = 75
"src/file_organizer/methodologies/para/detection/__init__.py" = 100
"src/file_organizer/methodologies/para/detection/heuristics.py" = 70
"src/file_organizer/methodologies/para/folder_generator.py" = 80
"src/file_organizer/methodologies/para/folder_mapper.py" = 75
"src/file_organizer/methodologies/para/migration_manager.py" = 80
"src/file_organizer/methodologies/para/rules/__init__.py" = 100
"src/file_organizer/methodologies/para/rules/engine.py" = 40
"src/file_organizer/models/__init__.py" = 100
"src/file_organizer/models/_claude_client.py" = 25
"src/file_organizer/models/_claude_response.py" = 25
"src/file_organizer/models/_llama_cpp_helpers.py" = 0
"src/file_organizer/models/_ollama_response.py" = 100
"src/file_organizer/models/_openai_client.py" = 35
"src/file_organizer/models/_openai_response.py" = 100
"src/file_organizer/models/_vision_helpers.py" = 30
"src/file_organizer/models/analytics.py" = 75
"src/file_organizer/models/audio_model.py" = 50
"src/file_organizer/models/audio_registry.py" = 100
"src/file_organizer/models/audio_transcriber.py" = 30
"src/file_organizer/models/base.py" = 85
"src/file_organizer/models/claude_text_model.py" = 15
"src/file_organizer/models/claude_vision_model.py" = 15
"src/file_organizer/models/llama_cpp_text_model.py" = 0
"src/file_organizer/models/mlx_text_model.py" = 0
"src/file_organizer/models/model_manager.py" = 90
"src/file_organizer/models/openai_text_model.py" = 15
"src/file_organizer/models/openai_vision_model.py" = 20
"src/file_organizer/models/provider_factory.py" = 100
"src/file_organizer/models/provider_registry.py" = 70
"src/file_organizer/models/registry.py" = 100
"src/file_organizer/models/suggestion_types.py" = 70
"src/file_organizer/models/text_model.py" = 75
"src/file_organizer/models/text_registry.py" = 100
"src/file_organizer/models/vision_model.py" = 65
"src/file_organizer/models/vision_registry.py" = 100
"src/file_organizer/optimization/__init__.py" = 100
"src/file_organizer/optimization/batch_sizer.py" = 75
"src/file_organizer/optimization/buffer_pool.py" = 65
"src/file_organizer/optimization/connection_pool.py" = 85
"src/file_organizer/optimization/database.py" = 90
"src/file_organizer/optimization/lazy_loader.py" = 60
"src/file_organizer/optimization/leak_detector.py" = 95
"src/file_organizer/optimization/memory_limiter.py" = 85
"src/file_organizer/optimization/memory_profiler.py" = 80
"src/file_organizer/optimization/model_cache.py" = 90
"src/file_organizer/optimization/query_cache.py" = 100
"src/file_organizer/optimization/resource_monitor.py" = 70
"src/file_organizer/optimization/warmup.py" = 100
"src/file_organizer/parallel/__init__.py" = 100
"src/file_organizer/parallel/checkpoint.py" = 80
"src/file_organizer/parallel/config.py" = 100
"src/file_organizer/parallel/executor.py" = 65
"src/file_organizer/parallel/models.py" = 100
"src/file_organizer/parallel/persistence.py" = 75
"src/file_organizer/parallel/priority_queue.py" = 85
"src/file_organizer/parallel/processor.py" = 65
"src/file_organizer/parallel/resource_manager.py" = 25
"src/file_organizer/parallel/result.py" = 95
"src/file_organizer/parallel/resume.py" = 100
"src/file_organizer/parallel/scheduler.py" = 95
"src/file_organizer/parallel/throttle.py" = 70
"src/file_organizer/pipeline/__init__.py" = 100
"src/file_organizer/pipeline/config.py" = 70
"src/file_organizer/pipeline/orchestrator.py" = 65
"src/file_organizer/pipeline/processor_pool.py" = 35
"src/file_organizer/pipeline/router.py" = 60
"src/file_organizer/pipeline/stages/__init__.py" = 100
"src/file_organizer/pipeline/stages/analyzer.py" = 25
"src/file_organizer/pipeline/stages/postprocessor.py" = 100
"src/file_organizer/pipeline/stages/preprocessor.py" = 85
"src/file_organizer/pipeline/stages/writer.py" = 90
"src/file_organizer/plugins/__init__.py" = 100
"src/file_organizer/plugins/api/__init__.py" = 100
"src/file_organizer/plugins/api/endpoints.py" = 75
"src/file_organizer/plugins/api/hooks.py" = 90
"src/file_organizer/plugins/api/models.py" = 85
"src/file_organizer/plugins/base.py" = 90
"src/file_organizer/plugins/config.py" = 85
"src/file_organizer/plugins/errors.py" = 100
"src/file_organizer/plugins/executor.py" = 75
"src/file_organizer/plugins/hooks.py" = 90
"src/file_organizer/plugins/ipc.py" = 70
"src/file_organizer/plugins/lifecycle.py" = 75
"src/file_organizer/plugins/marketplace/__init__.py" = 100
"src/file_organizer/plugins/marketplace/errors.py" = 100
"src/file_organizer/plugins/marketplace/installer.py" = 70
"src/file_organizer/plugins/marketplace/metadata.py" = 90
"src/file_organizer/plugins/marketplace/models.py" = 70
"src/file_organizer/plugins/marketplace/repository.py" = 60
"src/file_organizer/plugins/marketplace/reviews.py" = 55
"src/file_organizer/plugins/marketplace/service.py" = 80
"src/file_organizer/plugins/marketplace/validators.py" = 75
"src/file_organizer/plugins/registry.py" = 65
"src/file_organizer/plugins/sdk/__init__.py" = 100
"src/file_organizer/plugins/sdk/client.py" = 85
"src/file_organizer/plugins/sdk/decorators.py" = 100
"src/file_organizer/plugins/sdk/testing.py" = 100
"src/file_organizer/plugins/security.py" = 100
"src/file_organizer/review_regressions/__init__.py" = 100
"src/file_organizer/review_regressions/api_compat.py" = 20
"src/file_organizer/review_regressions/audit.py" = 95
"src/file_organizer/review_regressions/correctness.py" = 90
"src/file_organizer/review_regressions/framework.py" = 80
"src/file_organizer/review_regressions/memory_lifecycle.py" = 90
"src/file_organizer/review_regressions/security.py" = 80
"src/file_organizer/services/__init__.py" = 100
"src/file_organizer/services/analytics/__init__.py" = 100
"src/file_organizer/services/analytics/analytics_service.py" = 95
"src/file_organizer/services/analytics/metrics_calculator.py" = 90
"src/file_organizer/services/analytics/storage_analyzer.py" = 90
"src/file_organizer/services/analyzer.py" = 100
"src/file_organizer/services/audio/__init__.py" = 100
"src/file_organizer/services/audio/classifier.py" = 90
"src/file_organizer/services/audio/content_analyzer.py" = 20
"src/file_organizer/services/audio/metadata_extractor.py" = 35
"src/file_organizer/services/audio/organizer.py" = 30
"src/file_organizer/services/audio/preprocessor.py" = 20
"src/file_organizer/services/audio/transcriber.py" = 35
"src/file_organizer/services/audio/utils.py" = 95
"src/file_organizer/services/auto_tagging/__init__.py" = 75
"src/file_organizer/services/auto_tagging/content_analyzer.py" = 80
"src/file_organizer/services/auto_tagging/tag_learning.py" = 55
"src/file_organizer/services/auto_tagging/tag_recommender.py" = 65
"src/file_organizer/services/copilot/__init__.py" = 100
"src/file_organizer/services/copilot/conversation.py" = 95
"src/file_organizer/services/copilot/engine.py" = 90
"src/file_organizer/services/copilot/executor.py" = 50
"src/file_organizer/services/copilot/intent_parser.py" = 90
"src/file_organizer/services/copilot/models.py" = 95
"src/file_organizer/services/copilot/rules/__init__.py" = 100
"src/file_organizer/services/copilot/rules/models.py" = 95
"src/file_organizer/services/copilot/rules/preview.py" = 55
"src/file_organizer/services/copilot/rules/rule_manager.py" = 85
"src/file_organizer/services/deduplication/__init__.py" = 85
"src/file_organizer/services/deduplication/backup.py" = 80
"src/file_organizer/services/deduplication/detector.py" = 80
"src/file_organizer/services/deduplication/document_dedup.py" = 95
"src/file_organizer/services/deduplication/embedder.py" = 45
"src/file_organizer/services/deduplication/extractor.py" = 65
"src/file_organizer/services/deduplication/hasher.py" = 75
"src/file_organizer/services/deduplication/image_dedup.py" = 85
"src/file_organizer/services/deduplication/image_utils.py" = 85
"src/file_organizer/services/deduplication/index.py" = 85
"src/file_organizer/services/deduplication/quality.py" = 80
"src/file_organizer/services/deduplication/reporter.py" = 90
"src/file_organizer/services/deduplication/semantic.py" = 95
"src/file_organizer/services/deduplication/viewer.py" = 95
"src/file_organizer/services/intelligence/__init__.py" = 100
"src/file_organizer/services/intelligence/confidence.py" = 70
"src/file_organizer/services/intelligence/conflict_resolver.py" = 90
"src/file_organizer/services/intelligence/directory_prefs.py" = 90
"src/file_organizer/services/intelligence/feedback_processor.py" = 95
"src/file_organizer/services/intelligence/folder_learner.py" = 70
"src/file_organizer/services/intelligence/naming_analyzer.py" = 95
"src/file_organizer/services/intelligence/pattern_extractor.py" = 95
"src/file_organizer/services/intelligence/pattern_learner.py" = 85
"src/file_organizer/services/intelligence/preference_database.py" = 95
"src/file_organizer/services/intelligence/preference_store.py" = 65
"src/file_organizer/services/intelligence/preference_tracker.py" = 95
"src/file_organizer/services/intelligence/profile_exporter.py" = 65
"src/file_organizer/services/intelligence/profile_importer.py" = 85
"src/file_organizer/services/intelligence/profile_manager.py" = 75
"src/file_organizer/services/intelligence/profile_merger.py" = 60
"src/file_organizer/services/intelligence/profile_migrator.py" = 45
"src/file_organizer/services/intelligence/scoring.py" = 75
"src/file_organizer/services/intelligence/template_manager.py" = 95
"src/file_organizer/services/misplacement_detector.py" = 90
"src/file_organizer/services/pattern_analyzer.py" = 85
"src/file_organizer/services/search/__init__.py" = 100
"src/file_organizer/services/search/bm25_index.py" = 90
"src/file_organizer/services/search/embedding_cache.py" = 90
"src/file_organizer/services/search/hybrid_retriever.py" = 95
"src/file_organizer/services/search/vector_index.py" = 85
"src/file_organizer/services/smart_suggestions.py" = 80
"src/file_organizer/services/suggestion_feedback.py" = 50
"src/file_organizer/services/text_processor.py" = 95
"src/file_organizer/services/video/__init__.py" = 100
"src/file_organizer/services/video/metadata_extractor.py" = 80
"src/file_organizer/services/video/organizer.py" = 100
"src/file_organizer/services/video/scene_detector.py" = 20
"src/file_organizer/services/vision_processor.py" = 90
"src/file_organizer/tui/__init__.py" = 100
"src/file_organizer/tui/analytics_view.py" = 35
"src/file_organizer/tui/app.py" = 65
"src/file_organizer/tui/audio_view.py" = 20
"src/file_organizer/tui/copilot_view.py" = 35
"src/file_organizer/tui/file_browser.py" = 55
"src/file_organizer/tui/file_preview.py" = 45
"src/file_organizer/tui/methodology_view.py" = 35
"src/file_organizer/tui/organization_preview.py" = 35
"src/file_organizer/tui/settings_view.py" = 40
"src/file_organizer/tui/setup_wizard_view.py" = 0
"src/file_organizer/tui/undo_history_view.py" = 20
"src/file_organizer/undo/__init__.py" = 100
"src/file_organizer/undo/models.py" = 100
"src/file_organizer/undo/rollback.py" = 90
"src/file_organizer/undo/undo_manager.py" = 90
"src/file_organizer/undo/validator.py" = 95
"src/file_organizer/undo/viewer.py" = 80
"src/file_organizer/updater/__init__.py" = 100
"src/file_organizer/updater/background.py" = 35
"src/file_organizer/updater/checker.py" = 25
"src/file_organizer/updater/installer.py" = 15
"src/file_organizer/updater/manager.py" = 25
"src/file_organizer/updater/sidecar_updater.py" = 80
"src/file_organizer/updater/state.py" = 90
"src/file_organizer/utils/__init__.py" = 100
"src/file_organizer/utils/atomic_io.py" = 80
"src/file_organizer/utils/chart_generator.py" = 100
"src/file_organizer/utils/epub_enhanced.py" = 15
"src/file_organizer/utils/file_readers.py" = 100
"src/file_organizer/utils/readers/__init__.py" = 80
"src/file_organizer/utils/readers/_base.py" = 75
"src/file_organizer/utils/readers/archives.py" = 60
"src/file_organizer/utils/readers/cad.py" = 5
"src/file_organizer/utils/readers/documents.py" = 30
"src/file_organizer/utils/readers/ebook.py" = 20
"src/file_organizer/utils/readers/scientific.py" = 10
"src/file_organizer/utils/text_processing.py" = 60
"src/file_organizer/version.py" = 85
"src/file_organizer/watcher/__init__.py" = 100
"src/file_organizer/watcher/config.py" = 100
"src/file_organizer/watcher/handler.py" = 25
"src/file_organizer/watcher/monitor.py" = 20
"src/file_organizer/watcher/queue.py" = 100
"src/file_organizer/web/__init__.py" = 100
"src/file_organizer/web/_helpers.py" = 70
"src/file_organizer/web/csrf.py" = 45
"src/file_organizer/web/file_operations.py" = 75
"src/file_organizer/web/file_validators.py" = 70
"src/file_organizer/web/files_routes.py" = 95
"src/file_organizer/web/marketplace_routes.py" = 95
"src/file_organizer/web/organize_routes.py" = 70
"src/file_organizer/web/profile_routes.py" = 80
"src/file_organizer/web/router.py" = 70
"src/file_organizer/web/settings_routes.py" = 85
"src/file_organizer/web/setup_routes.py" = 80
